*Updated*
-Changed miniplayer fullscreen height value from 100vh to 100% to ensure it works more correctly with android devices with the url bar set to hide on scroll (the default setting)